giovanni - wk9 day2 - social_network - set up LogIn Registration Logo Whelcome Shell on server && client

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
-<!doctype html>
-<title>Hello World</title>
-<main></main>
-<script src="/bundle.js"></script>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>Just Another social network</title>
+</head>
+
+<body>
+    <main></main>
+    <script src="/bundle.js"></script>
+</body>
+
+</html>
