giovanni - wk10 day3 - social_network - REDUX has been integrated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Just Another social network</title>
+    <title>SHSN - Super Hero Social Network</title>
 </head>
 
 <body>
