giovanni - wk10 day7 - social_network - start to implement socket.io

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>SHSN - Super Hero Social Network</title>
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
 </head>
 
 <body>
